# xdevs_no_std.rs

./: Cargo.toml  README.md  bench_li_esp.py  build.rs  deny.toml  devstone.py  li_width_depth.py
.github/workflows/: bench.yml  lint.yml  quality.yml  test.yml
Resultados/: HI_benchmark_devstone_esp32.xlsx  HO_benchmark_devstone_esp32.xlsx  LI_benchmark_devstone_esp32.xlsx  benchmark_devstone.xlsx
benches/: hi.rs  hi_box.rs  ho.rs  ho_box.rs  li.rs  li_box.rs
benchmark_results/: benchmark_20260507_142822.csv
benchmark_results/main_copies/: main_li_W10_D1.rs  main_li_W10_D11.rs  main_li_W10_D12.rs  main_li_W10_D13.rs  main_li_W10_D14.rs  main_li_W10_D15.rs  main_li_W10_D16.rs  main_li_W10_D17.rs  main_li_W10_D18.rs  main_li_W10_D19.rs  main_li_W10_D20.rs  main_li_W10_D21.rs  main_li_W10_D22.rs  main_li_W10_D23.rs  main_li_W10_D24.rs  main_li_W10_D25.rs  main_li_W10_D26.rs  main_li_W10_D27.rs  main_li_W10_D28.rs  main_li_W10_D29.rs  main_li_W10_D30.rs  main_li_W10_D31.rs  main_li_W10_D32.rs  main_li_W10_D33.rs  main_li_W10_D34.rs  main_li_W10_D35.rs  main_li_W10_D36.rs  main_li_W10_D37.rs  main_li_W10_D38.rs  main_li_W10_D39.rs  main_li_W10_D40.rs  main_li_W10_D41.rs  main_li_W10_D42.rs  main_li_W10_D43.rs  main_li_W10_D44.rs  main_li_W10_D45.rs  main_li_W10_D46.rs  main_li_W10_D47.rs  main_li_W10_D48.rs  main_li_W10_D49.rs  (+2503 more)
benchmark_results_v1/: benchmark_20260507_091630.csv  summary_20260507_091630.csv
benchmark_results_v1/main_copies/: main_li_W10_D10.rs  main_li_W10_D2.rs  main_li_W10_D3.rs  main_li_W10_D4.rs  main_li_W10_D5.rs  main_li_W10_D7.rs  main_li_W2_D10.rs  main_li_W2_D2.rs  main_li_W2_D5.rs  main_li_W2_D6.rs  main_li_W2_D9.rs  main_li_W3_D10.rs  main_li_W3_D5.rs  main_li_W3_D7.rs  main_li_W4_D10.rs  main_li_W4_D2.rs  main_li_W4_D5.rs  main_li_W4_D7.rs  main_li_W4_D8.rs  main_li_W4_D9.rs  main_li_W5_D4.rs  main_li_W5_D5.rs  main_li_W5_D8.rs  main_li_W5_D9.rs  main_li_W6_D10.rs  main_li_W6_D2.rs  main_li_W6_D3.rs  main_li_W6_D4.rs  main_li_W6_D5.rs  main_li_W6_D6.rs  main_li_W6_D7.rs  main_li_W6_D9.rs  main_li_W7_D10.rs  main_li_W7_D3.rs  main_li_W7_D5.rs  main_li_W7_D8.rs  main_li_W8_D10.rs  main_li_W8_D4.rs  main_li_W8_D6.rs  main_li_W8_D8.rs  (+8 more)
esp_dev_duration/: Cargo.toml
esp_devstone/: Cargo.toml  muestreo.py  results_HI.csv  results_HO.csv  results_LI.csv
esp_devstone_copia/: Cargo.toml
examples/: LI_model  LI_model.rs  atomic1.rs  bloom_model.rs  gpb.rs  gpt.rs  gpt2.rs  gpt_array.rs  gpt_async.rs  gpt_enum.rs  gpt_optional.rs  input.csv  multiprocessor.rs  multisink.rs  prueba.rs  rt_engine.rs
examples/coupled2/: main.rs
examples/devstone/: main.rs
examples/prueba/: atomic1.rs
examples/rt_engine/: main.rs
macros/: Cargo.toml  build.rs
macros/src/: atomic.rs  component.rs  component2.rs  coupled.rs  coupling.rs  couplings.rs  derive.rs  devstone.rs  lib.rs  model_enum.rs  modelenum.rs  port.rs  rt_engine.rs  to_component.rs
macros/src/component/: atomic.rs  backend.rs  coupled.rs  port.rs  rt_engine.rs  state.rs
macros/src/component/backend/: embassy.rs  no_backend.rs  tokio.rs
macros/src/component/coupled/: components.rs  coupling.rs
macros/src/component2/: atomic.rs  backend.rs  coupled.rs  coupled2.rs  port.rs  rt_engine.rs  state.rs
macros/src/component2/backend/: embassy.rs  no_backend.rs  tokio.rs
macros/src/component2/coupled/: components.rs  coupling.rs
macros/src/component2/coupled2/: components.rs  coupling.rs
macros/src/coupled/: backend.rs  eic.rs  eoc.rs  ic.rs  rt_engine.rs
macros/src/coupled/backend/: embassy.rs  no_backend.rs  tokio.rs
macros/src/rt_engine/: backend.rs
macros/src/rt_engine/backend/: embassy.rs  no_backend.rs  tokio.rs
resultados/: HI_benchmark_devstone_esp32.xlsx  HO_benchmark_devstone_esp32.xlsx  LI_benchmark_devstone_esp32.xlsx  benchmark_devstone.xlsx  results_HI.csv  results_HO.csv  results_LI.csv
src/: atomic.rs  aux.rs  component.rs  coupled.rs  devstone.rs  export.rs  gpt.rs  impls.rs  lib.rs  port.rs  processor.rs  rt_engine.rs  simulation.rs  simulator.rs  traits.rs
src/_bin/: devstone_generator.rs  generated_devstone.rs
src/component/: atomic.rs  coupled.rs
src/devstone/: common.rs  hi.rs  hi_box.rs  hi_ref.rs  ho.rs  ho_box.rs  ho_ref.rs  li.rs  li_box.rs  li_ref.rs
src/export/: embassy.rs  tokio.rs
src/modelo/: atomic1.rs  mod.rs
src/rt_engine/: traits.rs
src/simulation/: coordinator.rs  embassy.rs  simulator.rs  std.rs
src/simulator/: embassy.rs  std.rs
xdevs_devstone/: Cargo.toml
xdevs_devstone/.cargo/: config.toml
xdevs_devstone/examples/: main.rs  main_hi.rs  main_ho.rs  main_li.rs
xdevs_devstone/src/: common.rs  hi.rs  hi_no.rs  ho.rs  ho_no.rs  li.rs  lib.rs
xdevs_devstone_macros/: Cargo.toml
xdevs_devstone_macros/src/: expand.rs  lib.rs
xdevs_no_std/: Cargo.toml
xdevs_no_std/examples/: gpb.rs  gpt.rs  gpt2.rs  gpt_async.rs  multiprocessor.rs  prueba.rs
xdevs_no_std/examples/coupled2/: main.rs
xdevs_no_std/examples/prueba/: atomic1.rs
xdevs_no_std/macros/src/: component.rs  component2.rs  lib.rs
xdevs_no_std/macros/src/component/: atomic.rs  coupled.rs  port.rs
xdevs_no_std/macros/src/component/coupled/: coupling.rs
xdevs_no_std/macros/src/component2/: atomic.rs  coupled.rs  coupled2.rs
xdevs_no_std/src/: impls.rs  lib.rs  simulator.rs  traits.rs
xdevs_no_std/src/simulator/: embassy.rs  std.rs
