[package]
name = "xdevs-no-std"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "no-std implementation of xDEVS for real-time simulation on embedded systems"
keywords = ["embedded", "simulation", "real-time", "no-std"]
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs_no_std.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xdevs"
path = "src/lib.rs"

[dependencies]
csv = "1.3.0"
heapless = "0.8"
xdevs-no-std-macros = { path = "macros", version = "0.1.0" }

[features]
std = []
