[package]
edition      = "2024"
name         = "esp_devstone"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp_devstone"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6"] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

critical-section = "1.2.0"
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }

xdevs-no-std = { path = "../xdevs_no_std" }
xdevs_devstone ={ path = "../xdevs_devstone" }
xdevs_devstone_macros = {path = "../xdevs_devstone_macros"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
