[package]
name = "xdevs_devstone"
version = "0.1.0"
edition = "2024"

[dependencies]
xdevs-no-std = { path = "../xdevs_no_std" , features = ["std"]}
embassy-time = "0.5.0"

[dev-dependencies] 
xdevs_devstone_macros = {path = "../xdevs_devstone_macros"}

# [features]
# embassy = []
# std = ["tokio/time", "embassy-time/std"]

